<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/login_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    style="@style/viewParent.headerText.NoMode"
                    android:text="@string/already_nhave_an_naccount"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_register_hero"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"

                    />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">
                <EditText
                    android:id="@+id/edittext_mobileno"
                    style="@style/modifiedEditText"
                    android:inputType="number"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:hint="@string/user_mobile_no"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">
                <EditText
                    android:id="@+id/edittext_password"
                    style="@style/modifiedEditText"
                    android:hint="@string/password"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:drawableRight="@drawable/eye_icon"
                    android:drawableTint="@color/colorPrimary"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textview_forgotpassword"
                style="@style/viewParent"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/newsMoreTextSize"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please enabled location"
                android:textColor="@color/error_color"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/icon_shape"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="40dp"
                />



            <TextView
                style="@style/parent"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:text="@string/new_user_register_now"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:onClick="onLoginClick"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="12"
                android:gravity="center"
                android:layout_marginTop="30dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_weight="3"/>

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Use other Methods"
                    android:layout_weight="6"
                    android:textSize="12sp"
                    android:textAlignment="center"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_weight="3"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_referal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                />


        </LinearLayout>
    </ScrollView>
    <View
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_side_bg"/>
    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="40dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_add_img"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="30dp"
        android:onClick="onLoginClick"
        android:scaleType="fitXY"
        app:tint="@color/colorPrimary"
        />

</RelativeLayout>